--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <div class="container">
       <!-- Timeblocks go here -->
 
-      <div id="8" class="row time-block">
+      <div id="8" class="row timeBlock">
         <div class="col-md-1 hour">8 AM</div>
         <textarea class="col-md-10 description"> </textarea>
         <button class="btn saveBtn col-md-1">
@@ -40,7 +40,7 @@
         </button>
       </div>
 
-      <div id="9" class="row time-block">
+      <div id="9" class="row timeBlock">
         <div class="col-md-1 hour">9 AM</div>
         <textarea class="col-md-10 description"></textarea>
         <button class="btn saveBtn col-md-1">
@@ -48,7 +48,7 @@
         </button>
       </div>
 
-      <div id="10" class="row time-block">
+      <div id="10" class="row timeBlock">
         <div class="col-md-1 hour">10 AM</div>
         <textarea class="col-md-10 description"></textarea>
         <button class="btn saveBtn col-md-1">
@@ -56,7 +56,7 @@
         </button>
       </div>
 
-      <div id="11" class="row time-block">
+      <div id="11" class="row timeBlock">
         <div class="col-md-1 hour">11 AM</div>
         <textarea class="col-md-10 description"></textarea>
         <button class="btn saveBtn col-md-1">
@@ -64,7 +64,7 @@
         </button>
       </div>
 
-      <div id="12" class="row time-block">
+      <div id="12" class="row timeBlock">
         <div class="col-md-1 hour">12 PM</div>
         <textarea class="col-md-10 description"></textarea>
         <button class="btn saveBtn col-md-1">
@@ -72,7 +72,7 @@
         </button>
       </div>
 
-      <div id="13" class="row time-block">
+      <div id="13" class="row timeBlock">
         <div class="col-md-1 hour">1 PM</div>
         <textarea class="col-md-10 description"></textarea>
         <button class="btn saveBtn col-md-1">
@@ -80,7 +80,7 @@
         </button>
       </div>
 
-      <div id="14" class="row time-block">
+      <div id="14" class="row timeBlock">
         <div class="col-md-1 hour">2 PM</div>
         <textarea class="col-md-10 description"></textarea>
         <button class="btn saveBtn col-md-1">
@@ -88,7 +88,7 @@
         </button>
       </div>
 
-      <div id="15" class="row time-block">
+      <div id="15" class="row timeBlock">
         <div class="col-md-1 hour">3 PM</div>
         <textarea class="col-md-10 description"></textarea>
         <button class="btn saveBtn col-md-1">
@@ -96,7 +96,7 @@
         </button>
       </div>
 
-      <div id="16" class="row time-block">
+      <div id="16" class="row timeBlock">
         <div class="col-md-1 hour">4 pm</div>
         <textarea class="col-md-10 description"></textarea>
         <button class="btn saveBtn col-md-1">
@@ -104,7 +104,7 @@
         </button>
       </div>
 
-      <div id="17" class="row time-block">
+      <div id="17" class="row timeBlock">
         <div class="col-md-1 hour">5 pm</div>
         <textarea class="col-md-10 description"></textarea>
         <button class="btn saveBtn col-md-1">
